--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "name": "bearings",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
-    "preview": "vite preview --port 4173",
     "test:unit": "vitest --run --environment jsdom",
-    "test:unit:watch": "vitest --environment jsdom",
     "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
-    "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "prepare": "husky install"
+    "dev": "vite",
+    "prepare": "husky install",
+    "preview": "vite preview --port 4173",
+    "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
+    "test:unit:watch": "vitest --environment jsdom"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "roboto-fontface": "*",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -31,6 +36,8 @@
     "start-server-and-test": "^1.14.0",
     "vite": "^3.0.1",
     "vite-plugin-eslint": "^1.7.0",
-    "vitest": "^0.18.1"
+    "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vitest": "^0.18.1",
+    "vue-cli-plugin-vuetify": "~2.5.1"
   }
 }
