--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "vitest --run --environment jsdom",
     "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint:style": "stylelint **/*.css --fix --ignore-path .gitignore",
     "dev": "vite",
     "prepare": "husky install",
     "preview": "vite preview --port 4173",
@@ -27,16 +28,28 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.0.2",
     "cypress": "^10.3.0",
-    "eslint": "^8.5.0",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
-    "prettier": "^2.5.1",
+    "postcss-modules": "^4.3.1",
+    "postcss-nesting": "^10.1.10",
+    "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-prettier": "^2.0.0",
     "vite": "^3.0.1",
     "vite-plugin-eslint": "^1.7.0",
+    "vite-plugin-stylelint": "^3.0.6",
     "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vite-svg-loader": "^3.4.0",
     "vitest": "^0.18.1",
     "vue-cli-plugin-vuetify": "~2.5.1"
   }
