--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.0",
     "jsdom": "^20.0.0",
+    "postcss": "^8.4.14",
+    "postcss-custom-media": "^8.0.2",
     "postcss-modules": "^4.3.1",
     "postcss-nesting": "^10.1.10",
     "prettier": "^2.7.1",
