--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,5 +7,11 @@
     "stylelint-prettier"
   ],
   "rules": {
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global", "local"]
+      }
+    ]
   }
 }
