--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
